# WFC

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: data-pipeline.yml  ingest.yml
chatbot/: .gitignore  pyproject.toml
chatbot/tests/: test_chat.py  test_chunker.py  test_cleaner.py  test_crawler.py  test_search.py  test_store.py
chatbot/warframe_chatbot/: chat.py  chunker.py  cleaner.py  config.py  crawl.py  crawler.py  data_indexer.py  embedder.py  pipeline.py  search.py  store.py
data/: abilities.json  ability-stats.json  arcanes.json  helmets.json  images.json  manifest.json  mod-sets.json  mods.json  shard-bonuses.json  signature-weapons.json  warframes.json  weapon-passives.json  weapons.json
docs/superpowers/plans/: 2026-05-28-calc-engine.md  2026-05-28-pipeline-fixes.md  2026-05-28-warframe-planner-pipeline.md  2026-05-31-rag-chatbot.md
docs/superpowers/specs/: 2026-05-28-calc-engine-design.md
engine/: pyproject.toml
engine/interactions/: README.md
engine/tests/: test_build.py  test_calculator.py  test_checks.py  test_loader.py  test_loadout.py  test_loadout_calculator.py  test_notables.py  test_upgrade_cost.py  test_weapon_calculator.py
engine/warframe_engine/: build.py  calculator.py  checks.py  loader.py  loadout.py  loadout_calculator.py  notables.py  upgrade_cost.py  weapon_calculator.py
pipeline/: package.json  tsconfig.json
pipeline/src/: index.ts
pipeline/src/data/: stat-targets.json  upgrade-credits.json
pipeline/src/fetchers/: public-export.ts  wfcd.ts  wiki-images.ts  wiki-lua.ts  wiki-pages.ts
(+15 files in other folders)
