[project]
name = "warframe-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "litellm>=1.40.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
wf-crawl  = "warframe_chatbot.crawl:main"
wf-ingest = "warframe_chatbot.pipeline:main"
wf-chat   = "warframe_chatbot.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
